Revert "ipod overlap fix"
This reverts commit 9b0b56f04c940b3add93539f82684343ef04e8b7.

--- a/packages/components/src/components/mobile-drawer/mobile-drawer.scss
+++ b/packages/components/src/components/mobile-drawer/mobile-drawer.scss
@@ -122,7 +122,7 @@
                 pointer-events: auto;
             }
             &--has-subheader {
-                height: calc(100vh - 3.6rem - 4rem);
+                height: 100%;
             }
             &-title {
                 display: flex;
@@ -174,7 +174,6 @@
         color: var(--text-prominent);
         overflow-y: auto;
         overflow-x: hidden;
-        position: relative;
     }
     &__item {
         padding: 0 0 3.2rem 4.8rem;
